# smartusb-rs

./: Cargo.toml  README.md
.cargo/: config.toml
configs/: serial-ethernet-gadget.toml  serial-gadget.toml
src/: args.rs  conf.rs  display.rs  event.rs  gadgetconfig.rs  input.rs  main.rs
test/: smartusb.toml
